// Copyright 2018 2dfire .
// Authors paomian@2dfire.com

syntax = "proto3";
package basic;

// import "gogoproto/gogo.proto";

message EmptyRequest {}

message BasicResponse {
    uint32 code   = 1;
    string errMsg = 2;
}
